# packages/loopring-sdk/openapi.yml
@@ -1,12 +1,30 @@
 openapi: '3.0.2'
 info:
   title: SDK for Loopring Layer 2
-  version: '1.0'
+  version: '0.0.0'
+servers:
+  - url: https://api3.loopring.io
+    description: Mainnet server
+  - url: https://uat2.loopring.io
+    description: Goerli server
+tags:
+  - name: account
+    description: Loopring Account
+  - name: nft
+    description: Counterfactual NFT
+  - name: lock
+    description: Locking of Assets
+  - name: trade
+    description: Trade NFT
+  - name: wallet
+    description: Wallet APIs
 paths:
   /api/v3/counterFactualInfo:
     get:
       operationId: getCounterFactualInfo
       summary: Counterfactual Wallet Info
+      tags:
+        - account
       parameters:
         - in: query
           name: accountId
@@ -31,6 +49,8 @@ paths:
     get:
       operationId: getNFTOffchainFee
       summary: GET NFT Offchain Fee
+      tags:
+        - nft
       parameters:
         - in: query
           name: accountId
@@ -73,6 +93,8 @@ paths:
       operationId: getNextStorageId
       summary: Storage Id
       description: Fetches the next order id for a given sold token. If the need arises to repeatedly place orders in a short span of time, the order id can be initially fetched through the API and then managed locally. Each new order id can be derived from adding 2 to the last one.
+      tags:
+        - account
       parameters:
         - in: query
           name: accountId
@@ -114,6 +136,8 @@ paths:
       operationId: submitNFTMint
       summary: Mint NFT
       description: mint nft in Loopring layer2, only can mint ERC1155 in layer2 now.
+      tags:
+        - nft
       parameters:
         - in: header
           name: X-API-KEY
@@ -143,6 +167,8 @@ paths:
     get:
       operationId: getUserNftBalances
       summary: Get users NFT balance, besides amount, it also includes tokenId and nftData
+      tags:
+        - nft
       parameters:
         - in: query
           name: accountId
@@ -210,6 +236,8 @@ paths:
       operationId: lockAsset
       summary: Lock Asset
       description: Lock Asset.
+      tags:
+        - lock
       parameters:
         - in: header
           name: X-API-KEY
@@ -245,6 +273,8 @@ paths:
       operationId: unlockAsset
       summary: Unlock Asset
       description: Unlock Asset.
+      tags:
+        - lock
       parameters:
         - in: header
           name: X-API-KEY
@@ -280,6 +310,8 @@ paths:
       operationId: tradeNft
       summary: Trade NFT
       description: Trade NFT.
+      tags:
+        - trade
       parameters:
         - in: header
           name: X-API-KEY
@@ -309,6 +341,8 @@ paths:
       operationId: getAccount
       summary: Get Account info
       description: One of owner and accountId is required.
+      tags:
+        - account
       parameters:
         - in: query
           name: owner
@@ -333,6 +367,8 @@ paths:
     get:
       operationId: getUserApiKey
       summary: Get the ApiKey associated with the user's account
+      tags:
+        - account
       parameters:
         - in: query
           name: accountId
@@ -362,6 +398,8 @@ paths:
     get:
       operationId: resolveName
       summary: Resolve address to loopring ENS name
+      tags:
+        - wallet
       parameters:
         - in: query
           name: owner
@@ -633,6 +671,16 @@ components:
         localization:
           type: string
           description: Localization
+        createdAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
+        updatedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
       required:
         - name
         - decimals
@@ -679,6 +727,149 @@ components:
         - nftType
         - base
         - status
+    Preference:
+      type: object
+      properties:
+        favourite:
+          type: boolean
+        hide:
+          type: boolean
+    Cached:
+      type: object
+      properties:
+        avatar:
+          type: string
+          description: URL of collection avatar
+          example: https://d12jj0pnkw1mbj.cloudfront.net/088010b1d3ab60069e87a7055554f012eb82d55b4dc88ea7a9a197d89964bc46-original
+        banner:
+          type: string
+          description: URL of collection banner
+          example: https://d12jj0pnkw1mbj.cloudfront.net/088010b1d3ab60069e87a7055554f012eb82d55b4dc88ea7a9a197d89964bc46-original
+        tileUri:
+          type: string
+          description: URL of collection tile
+          example: https://d12jj0pnkw1mbj.cloudfront.net/088010b1d3ab60069e87a7055554f012eb82d55b4dc88ea7a9a197d89964bc46-original
+        thumbnail:
+          type: string
+          description: URL of collection thumbnail
+          example: https://d12jj0pnkw1mbj.cloudfront.net/088010b1d3ab60069e87a7055554f012eb82d55b4dc88ea7a9a197d89964bc46-original
+    Times:
+      type: object
+      properties:
+        createdAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
+        updatedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
+    Extra:
+      type: object
+      properties:
+        properties:
+          type: object
+          properties:
+            isLegacy:
+              type: boolean
+              description: If this collection was created from a legacy NFT token address, see Create collection from legacy NFTs
+            isPublic:
+              type: boolean
+            isCounterFactualNFT:
+              type: boolean
+              description: Whether the NFT token address was counter-factual
+            isMintable:
+              type: boolean
+              description: Whether the user can mint more nfts under this token address
+            isEditable:
+              type: boolean
+              description: Whether the user can edit collection info
+            isDeletable:
+              type: boolean
+              description: User can delete one collection only if he is the creator of that collection and the collection is empty
+        mintChannel:
+          type: string
+          description: Where this collection initially created
+          example: UNKNOWN_CHANNEL
+    Collection:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique collection Id
+          example: 256
+        owner:
+          type: string
+          description: Owner address
+          example: 0x3be20a5500a331ef148f1aca64e326cd0b605a4b
+        name:
+          type: string
+          description: Collection name
+          example: test1127
+        contractAddress:
+          type: string
+          description: ERC1155 nft token address to be deployed on L1
+          example: 0x4a71d8b79ab6d9ae89e6709a54e53db9c9e27e49
+        collectionAddress:
+          type: string
+          description: URL of collection metadata, if this collection is created via loopring.io web app, collectionAddress will start with 0x, and it can be visited on the browser via appending prefix https://nftinfos.loopring.io/ to the collectionAddress, for example, https://nftinfos.loopring.io/0x9717fa2a7d827b3db111be23938c95d14b875863. Otherwise, it may be the format of ipfs ipfs://... or https https://...
+          example: 0x9717fa2a7d827b3db111be23938c95d14b875863 or https://api.nft.gamestop.com/getCollectionMetadata?collectionId=a07373e5-989d-4746-909b-e87430b5947c
+        baseUri:
+          type: string
+          description: Generated by Loopring
+          example: ipfs://0x26ae6d3096348959d033b32ef635b58c0b50d5cb2165debafbb7e6eef783fd9e
+        nftFactory:
+          type: string
+          description: NFT factory contract address of this collection
+          example: 0xfDDA90dbCc99B3a91e3fB1292991Ba1076d9E281
+        description:
+          type: string
+          description: Text
+        avatar:
+          type: string
+          description: Ipfs URI or URL of collection image
+          example: ipfs://QmZop7r8RQkB3L9BNfkKsZfY82kTVoPQyaSiZsTeKgTDij
+        banner:
+          type: string
+          description: Ipfs URI or URL of collection banner
+          example: ipfs://QmZop7r8RQkB3L9BNfkKsZfY82kTVoPQyaSiZsTeKgTDij
+        thumbnail:
+          type: string
+          description: Ipfs URI or URL of collection thumbnail
+          example: ipfs://QmZop7r8RQkB3L9BNfkKsZfY82kTVoPQyaSiZsTeKgTDij
+        tileUri:
+          type: string
+          description: Ipfs URI or URL of collection tile
+          example: ipfs://QmZop7r8RQkB3L9BNfkKsZfY82kTVoPQyaSiZsTeKgTDij
+        cached:
+          $ref: '#/components/schemas/Cached'
+          description: Cached collection image URL read and stored by loopring if the cache is available. If the cache constructed fails will return empty.
+        deployStatus:
+          type: string
+          enum:
+            - NOT_DEPLOYED
+            - DEPLOY_FAILED
+            - DEPLOYING
+            - DEPLOYED
+          description: L1 ERC1155 NFT contract deploy status
+        nftType:
+          type: string
+          enum:
+            - ERC1155
+            - ERC721
+          description: Collections created from loopring.io are all ERC1155
+        isPublic:
+          type: boolean
+          description: is public
+        times:
+          $ref: '#/components/schemas/Times'
+          description: Created and updated time
+        extra:
+          $ref: '#/components/schemas/Extra'
+          description: Extra info
     CombinedBalance:
       type: object
       properties:
@@ -732,9 +923,23 @@ components:
             - DEPLOYING
             - DEPLOYED
           description: tokenAddress deploy status
+        preference:
+          $ref: '#/components/schemas/Preference'
         metadata:
           $ref: '#/components/schemas/Metadata'
           description: (Optional) only if metadata query parameter is true
+        collectionInfo:
+          $ref: '#/components/schemas/Collection'
+        balanceUpdatedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
+        updatedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp in milliseconds
+          example: 1669188281228
       required:
         - id
         - accountId
