# packages/loopring-sdk/src/lib/openapi/models/CombinedBalance.ts
@@ -4,7 +4,7 @@
  * SDK for Loopring Layer 2
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document: 1.0
+ * The version of the OpenAPI document: 0.0.0
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -13,6 +13,12 @@
  */
 
 import { exists, mapValues } from '../runtime';
+import type { Collection } from './Collection';
+import {
+    CollectionFromJSON,
+    CollectionFromJSONTyped,
+    CollectionToJSON,
+} from './Collection';
 import type { Metadata } from './Metadata';
 import {
     MetadataFromJSON,
@@ -25,6 +31,12 @@ import {
     PendingBalanceFromJSONTyped,
     PendingBalanceToJSON,
 } from './PendingBalance';
+import type { Preference } from './Preference';
+import {
+    PreferenceFromJSON,
+    PreferenceFromJSONTyped,
+    PreferenceToJSON,
+} from './Preference';
 
 /**
  * 
@@ -118,10 +130,34 @@ export interface CombinedBalance {
     deploymentStatus: CombinedBalanceDeploymentStatusEnum;
     /**
      * 
+     * @type {Preference}
+     * @memberof CombinedBalance
+     */
+    preference?: Preference;
+    /**
+     * 
      * @type {Metadata}
      * @memberof CombinedBalance
      */
     metadata?: Metadata;
+    /**
+     * 
+     * @type {Collection}
+     * @memberof CombinedBalance
+     */
+    collectionInfo?: Collection;
+    /**
+     * Unix timestamp in milliseconds
+     * @type {number}
+     * @memberof CombinedBalance
+     */
+    balanceUpdatedAt?: number;
+    /**
+     * Unix timestamp in milliseconds
+     * @type {number}
+     * @memberof CombinedBalance
+     */
+    updatedAt?: number;
 }
 
 
@@ -192,7 +228,11 @@ export function CombinedBalanceFromJSONTyped(json: any, ignoreDiscriminator: boo
         'minter': json['minter'],
         'royaltyPercentage': json['royaltyPercentage'],
         'deploymentStatus': json['deploymentStatus'],
+        'preference': !exists(json, 'preference') ? undefined : PreferenceFromJSON(json['preference']),
         'metadata': !exists(json, 'metadata') ? undefined : MetadataFromJSON(json['metadata']),
+        'collectionInfo': !exists(json, 'collectionInfo') ? undefined : CollectionFromJSON(json['collectionInfo']),
+        'balanceUpdatedAt': !exists(json, 'balanceUpdatedAt') ? undefined : json['balanceUpdatedAt'],
+        'updatedAt': !exists(json, 'updatedAt') ? undefined : json['updatedAt'],
     };
 }
 
@@ -219,7 +259,11 @@ export function CombinedBalanceToJSON(value?: CombinedBalance | null): any {
         'minter': value.minter,
         'royaltyPercentage': value.royaltyPercentage,
         'deploymentStatus': value.deploymentStatus,
+        'preference': PreferenceToJSON(value.preference),
         'metadata': MetadataToJSON(value.metadata),
+        'collectionInfo': CollectionToJSON(value.collectionInfo),
+        'balanceUpdatedAt': value.balanceUpdatedAt,
+        'updatedAt': value.updatedAt,
     };
 }
 
